<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <EditText
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="false"
        android:hint="@string/edt"

        android:inputType="none"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />



    <!--    <EditText-->
    <!--        android:id="@+id/editTextTextPersonName"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:ems="10"-->
    <!--        android:inputType="none"-->
    <!--        android:text="@string/display"-->
    <!--        android:textSize="36sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        android:autofillHints="false"-->
    <!--        tools:ignore="LabelFor" />-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/backspaceBtn"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:text="@string/backspace"
        android:textAllCaps="false"
        app:cornerRadius="19dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/display"
        app:layout_constraintVertical_bias="0.96">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearBtn"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:text="@string/clear"
                android:onClick="onClearButton"
                android:textSize="24sp"
                app:cornerRadius="19dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/parenthesisBtn"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/parenthesis"
                android:textSize="24sp"
                app:cornerRadius="19dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exponentBtn"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/exponent"
                android:textSize="24sp"
                app:cornerRadius="19dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/divisionBtn"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/division"
                android:textSize="24sp"
                app:cornerRadius="19dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sevenBtn"

                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textSize="24sp"
                app:cornerRadius="19dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eightBtn"

                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textSize="24sp"
                app:cornerRadius="19dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nineBtn"

                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textSize="24sp"
                app:cornerRadius="19dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiplyBtn"

                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/multiply"
                android:textSize="24sp"
                app:cornerRadius="19dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fourBtn"

                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/four"
                android:textSize="24sp"
                app:cornerRadius="19dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fiveBtn"

                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/five"
                android:textSize="24sp"
                app:cornerRadius="19dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sixBtn"

                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/six"
                android:textSize="24sp"
                app:cornerRadius="19dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/subtractBtn"

                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/subtract"
                android:textSize="24sp"
                app:cornerRadius="19dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/oneBtn"

                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/one"
                android:textSize="24sp"
                app:cornerRadius="19dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/twoBtn"

                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/two"
                android:textSize="24sp"
                app:cornerRadius="19dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/threeBtn"

                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/three"
                android:textSize="24sp"
                app:cornerRadius="19dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addBtn"

                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/add"
                android:textSize="24sp"
                app:cornerRadius="19dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plusMinusBtn"

                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/plusMinus"
                android:textSize="24sp"
                app:cornerRadius="19dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/zeroBtn"

                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textSize="24sp"
                app:cornerRadius="19dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pointBtn"

                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/point"
                android:textSize="24sp"
                app:cornerRadius="19dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equalsBtn"

                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#4CAF50"
                android:text="@string/equals"
                android:textColor="#0D47A1"
                android:textSize="24sp"
                app:cornerRadius="19dp" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>